# slog

./: README.md  example.c  slog.h
tests/: README.md  meson.build  test_buffer.c  test_handler.c  test_json.c  test_level.c  test_node.c  test_type.c
